MH-1130 - Added broader support for url schemes by switching urls to uris
git-svn-id: https://opencast.jira.com/svn/MH/trunk@4148 e6edf6fb-f266-4316-afb4-e53d95876a76